Modified to permit pull/push from repo

--- a/ex/Page.html
+++ b/ex/Page.html
@@ -7,7 +7,7 @@
     <script>
       var GA = <?!= JSON.stringify(ga) ?>;
     </script>
-    <?!= include('GA.js'); ?>
+    <?!= include('ex/GA.js'); ?>
   </head>
   <body>
     <p>List of things: <button id="fetch" class="action">Fetch</button></p>
