--- a/ex/Page.html
+++ b/ex/Page.html
@@ -7,7 +7,7 @@
     <script>
       var GA = <?!= JSON.stringify(ga) ?>;
     </script>
-    <?!= include('ex/GA.js'); ?>
+    <?!= include('GA.js'); ?>
   </head>
   <body>
     <p>List of things: <button id="fetch" class="action">Fetch</button></p>
@@ -27,7 +27,7 @@
         gtag('event', 'Name Gen.', {event_category: 'GATrackDemo',event_label: 'Fetch Request', value: 1});
       });
     });
-
+    
     function showThings(things) {
       var list = $('#things');
       list.empty();
@@ -42,3 +42,5 @@
     </script>
   </body>
 </html>
+
+
